# taskbarhider

./: .gitignore  LICENSE  README.md  RestoreTaskbar.ahk  TaskbarHider.ahk  install.bat  install.ps1  uninstall.bat  uninstall.ps1
.github/workflows/: native-release.yml
installer/: README.md  TaskbarHider.iss
native/: CMakeLists.txt  README.md
native/rust_core/: Cargo.toml
native/rust_core/src/: lib.rs
native/src/: app.manifest  main.cpp  resource.h  resource.rc  rust_core.h
